[package]
name = "resources"
version = "0.1.0"
description = "Safe store for one value of each type, with interior mutability."
authors = ["Alexander Sepity <alexander.sepity@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
downcast-rs = "1.1.1"
fxhash = "0.2.1"
lock_api = "0.3.2"